<resources>
    <string name="app_name">Sicredi Teste</string>
    <string name="title_activity_test">Map</string>

    <string name="detail_text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown
        printer took a galley of type and scrambled it to make a type specimen book. It has survived
        not only five centuries, but also the leap into electronic typesetting, remaining essentially
        unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
        including versions of Lorem Ipsum.</string>
    <string name="description">Descrição</string>
    <string name="detail_price">PRICE</string>
    <string name="detail_date">DATE</string>
    <string name="local">Localização</string>
    <string name="textView_detail_coordenates">coordenates</string>

</resources>